# wasm-ca-rs

./: Cargo.toml  tracing.js  wasm_ca.js
crates/rapidbin-parser/: Cargo.toml
crates/rapidbin-parser/src/: lib.rs  main.rs
crates/wasm-tracing/: Cargo.toml
crates/wasm-tracing/src/: lib.rs  rapidbin.rs
crates/web-worker-mgmt/: Cargo.toml  wasm_ca.js
crates/web-worker-mgmt/src/: lib.rs  url.rs
src/: error.rs  lib.rs  mutex.rs  thread.rs  tracing.rs  wasm_abi.rs  wasm_tracing.js  wasm_tracing_bg.wasm
src/thread/: message.rs  url.rs  worker.js  worker_handle.rs
src/tracing/: rapidbin.rs
static/: harness.wat
