[workspace]
members = [ 
    "crates/wasm-tracing",
    "crates/rapidbin-parser"
]

[package]
name = "wasm-ca-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
parking_lot = { version = "0.12.3", features = ["nightly"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "Document",
    "Location",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerOptions",
    "WorkerType",
]
